[package]
edition = "2021"
name = "binding"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["official", "parallel"]
official = []
parallel = []

[dependencies]
napi = { version = "2.11.4", features = [
    "napi8",
    "error_anyhow",
    "serde-json",
] }
napi-derive = { workspaces = true }
anyhow = { workspaces = true }
serde_json = { workspace = true }
serde = { workspace = true }
swc_common = { version = "0.29.37" }
swc_ecmascript = { version = "0.222.8", features = ["parser", "visit"] }
rayon = "1.7.0"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.34", default-features = false }
