[package]
name = "binding_wasm"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core", features = ["wasm"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wasm-bindgen-futures = { version = "0.4.53" }
js-sys = { version = "0.3.80" }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { workspace = true, features = ["enable-interning"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
