[package]
name = "core"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
node = ["napi", "napi-derive"]
wasm = ["tsify-next", "wasm-bindgen", "serde_repr"]

[dependencies]
swc_common = { version = "0.33.26" }
swc_ecmascript = { version = "0.240.1", features = ["parser", "visit"] }
swc_compiler_base = { version = "0.8.1" }
swc_error_reporters = { version = "0.17.20" }
anyhow = { workspaces = true }
serde_json = { workspace = true }
serde = { workspace = true }
rayon = "1.10.0"
lazy_static = "1.4.0"

napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }

tsify-next = { version = "0.5.3", optional = true }
serde_repr = { version = "0.1.19", optional = true }
wasm-bindgen = { workspace = true, optional = true}
