[package]
name = "core"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
node = ["napi", "napi-derive"]
wasm = ["tsify-next", "wasm-bindgen", "serde_repr"]

[dependencies]
swc_common = { version = "14.0.4" }
swc_ecmascript = { version = "38.0.0", features = ["parser", "visit"] }
swc_compiler_base = { version = "35.0.0" }
swc_error_reporters = { version = "16.0.1" }
swc_config = { version = "3.1.2" }
rayon = "1.11.0"
lazy_static = "1.5.0"
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

# node binding deps
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }

# wasm binding deps
tsify-next = { version = "0.5.6", optional = true }
serde_repr = { version = "0.1.20", optional = true }
wasm-bindgen = { workspace = true, optional = true }
